# llm-zoomcamp

./: .gitignore  README.md  pyproject.toml
01-intro/: README.md  homework.ipynb  main.py  prompt_assistant.txt
02-vector-search/: README.md  homework.ipynb  rag_vector.ipynb  search.ipynb
02-vector-search/extra/: ResNet-50.ipynb
03-evaluation/: README.md  homework.ipynb
agents/: README.md  agents.ipynb  chat.py  communicate.py  server.py
dlt/: homework.ipynb  workshop.ipynb
